# llm-wiki

./: .gitignore  .llmwikiignore  AGENTS.md  CLAUDE.md  PROMPTS.md  README.md  pyproject.toml
incoming/: README.md
llm_wiki/: __init__.py  cli.py  workspace.py
reports/: knowledge-compounds-brief.md
tests/: test_workspace.py
wiki/: index.md  log.md  overview.md
wiki/analyses/: llm-wiki-architecture.md
wiki/sources/: llm-wiki-diagram-1.md  llm-wiki-diagram-2.md  llm-wiki-diagram-3.md
